--- a/index.html
+++ b/index.html
@@ -220,13 +220,8 @@
 <body style="background: linear-gradient(rgba(255, 128, 0, 0.12) 1px, transparent 1px) 0% 0% / 40px 40px, linear-gradient(90deg, rgba(255, 191, 0, 0.12) 1px, transparent 1px), linear-gradient(135deg, rgb(255, 128, 0) 0%, rgb(255, 191, 0) 100%);">
   <div class="header">
     <div class="logo"><div class="logo-text">Scratchlet</div></div>
-  <a href="https://scratchlet-app.neocities.org/home" class="nav-btn">🏠 Home</a> 
-  <a href="https://scratchlet-app.neocities.org/stats" class="nav-btn">📊 Stats</a> 
-  <a href="https://scratchlet-app.neocities.org/market" class="nav-btn"> 🛒 Market</a> 
-  <a href="https://scratchlet-app.neocities.org/blooks" class="nav-btn">😺 Blooks</a> 
-  <a href="https://scratchlet-app.neocities.org/settings" class="nav-btn">⚙️ Settings</a> 
-  <a href="https://scratchlet-app.neocities.org/chat" class="nav-btn">💬 Chat</a>
-  <a href="https://scratchlet-app.neocities.org" class="nav-btn" style="background: rgba(255, 0, 0, 0.3); color: white;">🚪 Logout</a>  
+  <a href="https://scratchlet.github.io/home/" class="nav-btn">🏠 Home</a> 
+  <a href="https://scratchlet.github.io/site/" class="nav-btn" style="background: rgba(255, 0, 0, 0.3); color: white;">🚪 Logout</a>  
     
     
     </div>
@@ -288,7 +283,7 @@
       <div style="display:flex; gap:10px; margin-top:12px;">
         <button class="btn" onclick="openAddModal()">➕ Add Custom Theme</button>
         <button class="btn" onclick="resetColors()">Reset Colors</button>
-        <button class="btn danger" onclick="resetData()">Reset All Data</button>
+        <button class="btn danger" onclick="()">Reset All Data (Unavailable)</button>
         <button class="btn danger" onclick="openDeleteModal()">🗑️ Delete Account</button>
       </div>
     </div>
@@ -668,7 +663,7 @@ function confirmDelete() {
   localStorage.clear();
   closeDeleteModal();
   showAlert('💀 Account deleted.');
-  setTimeout(()=>{ window.location.href = 'https://scratchlet-app.neocities.org'; }, 900);
+  setTimeout(()=>{ window.location.href = 'https://scratchlet.github.io/site/' }, 900);
 }
 </script>
 </body>
