--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <div style="display:flex; gap:10px; margin-top:12px;">
         <button class="btn" onclick="openAddModal()">➕ Add Custom Theme</button>
         <button class="btn" onclick="resetColors()">Reset Colors</button>
-        <button class="btn danger" onclick="()">Reset All Data (Unavailable)</button>
+        <button class="btn danger" onclick="resetData()">Reset All Data (Removes all data)</button>
         <button class="btn danger" onclick="openDeleteModal()">🗑️ Delete Account</button>
       </div>
     </div>
