--- a/index.html
+++ b/index.html
@@ -212,18 +212,21 @@
   }
   #deleteCard .actions { display:flex; justify-content:center; gap:12px; }
 
-  /* Buttons styling kept consistent above */
+
 </style>
 </head>
 
+<div class="header">
+  <div class="logo">
+    <div class="logo-text">Scratchlet</div>
+  </div>
 
-<body style="background: linear-gradient(rgba(255, 128, 0, 0.12) 1px, transparent 1px) 0% 0% / 40px 40px, linear-gradient(90deg, rgba(255, 191, 0, 0.12) 1px, transparent 1px), linear-gradient(135deg, rgb(255, 128, 0) 0%, rgb(255, 191, 0) 100%);">
-  <div class="header">
-    <div class="logo"><div class="logo-text">Scratchlet</div></div>
-  <a href="https://scratchlet.github.io/home/" class="nav-btn">🏠 Home</a> 
-  <a href="https://scratchlet.github.io/site/" class="nav-btn" style="background: rgba(255, 0, 0, 0.3); color: white;">🚪 Logout</a>  
-    
-    
+  <div class="nav-buttons">
+    <a href="https://scratchlet.github.io/home/" class="nav-btn">🏠 Home</a>
+    <a href="https://scratchlet.github.io/site/" class="nav-btn" style="background: rgba(255, 0, 0, 0.3); color: white;">🚪 Logout</a>
+  </div>
+</div>
+
     </div>
 
   <div class="settings-container">
